--- a/posts/templates/posts/newpost.html
+++ b/posts/templates/posts/newpost.html
@@ -1,10 +1,6 @@
 {% extends "include/base.html" %}
 {% block title %}
-    {% if post_id %}
-        Редактировать новую запись в сообществе
-    {% else %}
-        Создать новую запись в сообществе
-    {% endif %}
+    {{ post_id|yesno:"Редактировать новую запись в сообществе, Создать новую запись в сообществе" }}
 {% endblock %}
 {% block content %}
 {% load user_filters %}
@@ -13,11 +9,7 @@
     <div class="col-md-8 p-5">
         <div class="card">
             <div class="card-header">
-				{% if post_id %}
-					Редактировать запись в сообществе
-				{% else %}
-					Создать новую запись в сообществе
-				{% endif %}
+				{{ post_id|yesno:"Редактировать новую запись в сообществе,Создать новую запись в сообществе" }}
 			</div>
             <div class="card-body">
 
@@ -44,12 +36,8 @@
                     {% endfor %}
 
                     <div class="col-md-6 offset-md-4">              
-                            <button type="submit" class="btn btn-primary">                        
-								{% if post_id %}
-								    Сохранить
-								{% else %}
-								    Добавить
-								{% endif %}
+                            <button type="submit" class="btn btn-primary">
+							{{ post_id|yesno:"Сохранить,Добавить" }}
                             </button>                
 					</div>
                 </form>
