--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -1,10 +1,9 @@
 {% extends "include/base.html" %} 
 {% block title %} {{ flatpage.title }} {% endblock %}
+{% block header %} {{ flatpage.title }} {% endblock %}
+
 {% block content %}
 
-    <div class="container">
-        <h1>{{ flatpage.title }}</h1>
-        {{ flatpage.content }}
-    </div>
+    {{ flatpage.content }}
 
 {% endblock %}
