--- a/posts/templates/posts/post.html
+++ b/posts/templates/posts/post.html
@@ -10,7 +10,7 @@
 
         <div class="col-md-9">
 		    
-			{% include 'posts/include/post_item.html' %}
+			{% include 'posts/include/post_item.html' with post=post %}
 
         </div>
     </div>
