--- a/posts/templates/posts/group.html
+++ b/posts/templates/posts/group.html
@@ -5,11 +5,7 @@
 {% block content %}
   <p>{{ group.description|linebreaksbr }}</p>
   {% for post in page %}
-  <h3>
-    Автор: {{ post.author.get_full_name }}, Дата публикации: {{ post.pub_date|date:"d M Y" }}
-  </h3>
-  <p>{{ post.text|linebreaksbr }}</p>
-  <hr>
+	{% include "posts/include/post_item.html" with post=post %}
   {% endfor %}
   
   {% if page.has_other_pages %}
