--- a/posts/templates/posts/profile.html
+++ b/posts/templates/posts/profile.html
@@ -12,7 +12,7 @@
         <div class="col-md-9">
 		
 			{% for post in page %}
-                {% include 'posts/include/post_item.html' %}
+                {% include 'posts/include/post_item.html' with post=post %}
 		    {% endfor %}
 			
 		    {% if page.has_other_pages %}
